# numric

./: .gitignore  README.md  backend_server.js  e2e_test_outer.js  jsdom_test.js  package-lock.json  package.json
numarical_project/: README.md  backend_server.js  e2e_test.js  index.html  index.js  style.css
numarical_project/analytics/: analytics.css  analytics.js  index.html
numarical_project/auth/: auth.css  auth.html  auth.js
numarical_project/backend/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  example_fetch.js  install_headers.ps1  main.cpp
numarical_project/backend/include/: crow_all.h  expr_eval.h
numarical_project/backend/methods/: bisection.cpp  bisection.h  bisection_clean.cpp  bisection_impl.cpp
numarical_project/js/: analytics.js
numarical_project/linear/: index.html  index.js  linear.css
